# geoPython

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  README.md  intro.md  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  release.yml
chapters/basics/module_0/: module_00.ipynb
chapters/basics/module_1/: module_10.ipynb  module_11.ipynb  module_11_.ipynb  module_13.ipynb  output_data.gpkg  spData_0.ipynb  spData_1.ipynb  spData_2.ipynb  spData_3.ipynb  spData_4.ipynb
chapters/module_0/: environment.ipynb  syllabus.md
chapters/module_1/: spData_0.ipynb  spData_1.ipynb  spData_2.ipynb  spData_3.ipynb  spData_4.ipynb
chapters/module_2/: projections_0.ipynb  projections_1.ipynb  projections_2.ipynb  projections_3.ipynb
chapters/module_3/: geoprocessing_0.ipynb  geoprocessing_1.ipynb  geoprocessing_2.ipynb  geoprocessing_3.ipynb  geoprocessing_4.ipynb  geoprocessing_5.ipynb
chapters/module_4/: networkAnalysis_0.ipynb  networkAnalysis_1.ipynb  networkAnalysis_2.ipynb  networkAnalysis_3.ipynb
chapters/module_5/: rasters_0.ipynb  rasters_1.ipynb  rasters_2.ipynb
chapters/module_5/data/: tula_cropped_population.tif  tula_cropped_population_utm.tif  tula_region_population.tif
chapters/module_6/: index.html  map_0.ipynb  map_1.ipynb  map_2.ipynb
